@@ -36,7 +36,7 @@ $EM_CONF[$_EXTKEY] = array (
 	array (
 		'depends' => 
 		array (
-			'typo3' => '4.2.11-6.2.99',
+			'typo3' => '4.5.0-6.2.99',
 			'' => '',
 		),
 		'conflicts' => 
